src/test/ui/or-patterns/already-bound-name.stderr
error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:11:13
   |
LL |     let (a, a) = (0, 1); // Standard duplication without an or-pattern.
   |             ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:14:15
   |
LL |     let (a, A(a, _) | B(a)) = (0, A(1, 2));
   |               ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:14:25
   |
LL |     let (a, A(a, _) | B(a)) = (0, A(1, 2));
   |                         ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:18:26
   |
LL |     let (A(a, _) | B(a), a) = (A(0, 1), 2);
   |                          ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:21:15
   |
LL |     let (A(a, a) | B(a)) = A(0, 1);
   |               ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:24:22
   |
LL |     let (B(a) | A(a, a)) = A(0, 1);
   |                      ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:28:21
   |
LL |         B(a) | A(a, a) => {} // Let's ensure `match` has no funny business.
   |                     ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:32:37
   |
LL |     let (B(A(a, _) | B(a)) | A(a, A(a, _) | B(a))) = B(B(1));
   |                                     ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:32:47
   |
LL |     let (B(A(a, _) | B(a)) | A(a, A(a, _) | B(a))) = B(B(1));
   |                                               ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:37:37
   |
LL |     let (B(_) | A(A(a, _) | B(a), A(a, _) | B(a))) = B(B(1));
   |                                     ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:37:47
   |
LL |     let (B(_) | A(A(a, _) | B(a), A(a, _) | B(a))) = B(B(1));
   |                                               ^ used in a pattern more than once

error[E0408]: variable `a` is not bound in all patterns
  --> $DIR/already-bound-name.rs:37:10
   |
LL |     let (B(_) | A(A(a, _) | B(a), A(a, _) | B(a))) = B(B(1));
   |          ^^^^ pattern doesn't bind `a`        - variable not in all patterns

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:42:50
   |
LL |     let (B(A(a, _) | B(a)) | A(A(a, _) | B(a), A(a, _) | B(a))) = B(B(1));
   |                                                  ^ used in a pattern more than once

error[E0416]: identifier `a` is bound more than once in the same pattern
  --> $DIR/already-bound-name.rs:42:60
   |
LL |     let (B(A(a, _) | B(a)) | A(A(a, _) | B(a), A(a, _) | B(a))) = B(B(1));
   |                                                            ^ used in a pattern more than once

error[E0308]: mismatched types
  --> $DIR/already-bound-name.rs:32:32
   |
LL |     let (B(A(a, _) | B(a)) | A(a, A(a, _) | B(a))) = B(B(1));
   |              -                 ^                     ------- this expression has type `E<E<{integer}>>`
   |              |                 |
   |              |                 expected integer, found enum `E`
   |              first introduced with type `{integer}` here
   |
   = note: expected type `{integer}`
              found type `E<{integer}>`
   = note: a binding must have the same type in all alternatives

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0308, E0408, E0416.
For more information about an error, try `rustc --explain E0308`.
